Failure on CPUs allowing loads reordering: assert(_tasks[t] == 1) failed: What else?

XMLWordPrintable

    • gc
    • b09

        ---------------------------------------------------------
        STDOUT:
        CompileCommand: dontinline compiler/codecache/stress/Helper$TestCase.method
        For random generator using seed: 5925692144458820626
        To re-run test with same seed value please add "-Djdk.test.lib.random.seed=5925692144458820626" to command line.
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/workgroup.cpp:436
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/loongson/fujie/upgrade/jdk-mips-upgrade/src/hotspot/share/gc/shared/workgroup.cpp:436), pid=8637, tid=8662
        # assert(_tasks[t] == 1) failed: What else?
        #
        # JRE version: OpenJDK Runtime Environment (14.0) (fastdebug build 14-internal+0-adhoc.loongson.jdk-mips-upgrade)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 14-internal+0-adhoc.loongson.jdk-mips-upgrade, mixed mode, sharing, compressed oops, g1 gc, linux-mips64el)
        # Problematic frame:
        # V [libjvm.so+0x15d8144] SubTasksDone::try_claim_task(unsigned int)+0xb4
        #
        ---------------------------------------------------------

        The failure was first observed on our Loongson CPUs which allow loads reordering with the following test
        ---------------------------------------------------------
        make test TEST="compiler/codecache/stress/UnexpectedDeoptimizationTest.java" CONF=fastdebug
        ---------------------------------------------------------

              Assignee:
              Jie Fu
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: