8229020: Failure on CPUs allowing loads reordering: assert(_tasks[t] == 1) failed: What else? Reviewed-by: tschatzl, kbarrett